registration & login process has been done via passport.js

--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
     "axios": "^0.19.0",
+    "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^4.4.1",
+    "connect-mongo": "^2.0.3",
     "grunt": "1.0.4",
     "jquery": "^3.4.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sails": "^1.2.3",
     "sails-hook-grunt": "^4.0.0",
     "sails-hook-orm": "^2.1.1",
     "sails-hook-sockets": "^2.0.0",
-    "sails-mongo": "^1.0.1",
+    "sails-mongo": "^1.1.0",
     "select2": "^4.0.12",
     "sweetalert2": "^9.5.3"
   },
