author name change

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "type": "git",
     "url": "https://github.com/Virtuallified/Bookstore.git"
   },
-  "author": "Subh_ || Arnss",
+  "author": "Subh_ || Arnss_",
   "license": "MIT",
   "engines": {
     "node": "^12.13"
