--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "axios": "^0.19.0",
     "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^4.4.1",
-    "connect-mongo": "^2.0.3",
+    "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "grunt": "1.0.4",
     "jquery": "^3.4.1",
+    "moment": "^2.25.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sails": "^1.2.3",
