changes in setup

--- a/.github/workflows/integrate-deploy.yml
+++ b/.github/workflows/integrate-deploy.yml
@@ -38,4 +38,9 @@ jobs:
 
     steps:
     - name: Deploy The Sails JS App
+    - uses: actions/checkout@master
+    - uses: actions/setup-node@master
+      with:
+        node-version: 12
+    - run: npm ci
     - run: npm start
