--- a/.github/workflows/integrate-deploy.yml
+++ b/.github/workflows/integrate-deploy.yml
@@ -1,12 +1,9 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Github | Heroku CI/CD Setup
+name: Github CI/CD Setup
 
 on:
-  push:
-    branches: 
-      - master
   pull_request:
     branches:
       - master
@@ -32,15 +29,15 @@ jobs:
     - run: npm test
 
 
-  deploy:
-    needs: [test]
-    runs-on: ubuntu-latest
+  # deploy:
+  #   needs: [test]
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - name: Deploy The Sails JS App
-    - uses: actions/checkout@master
-    - uses: actions/setup-node@master
-      with:
-        node-version: 12
-    - run: npm ci
-    - run: npm start
+  #   steps:
+  #   - name: Deploy The Sails JS App in Server via SSH
+  #   - uses: actions/checkout@master
+  #     uses: actions/setup-node@master
+  #     with:
+  #       node-version: 12
+  #   - run: npm ci
+  #   - run: npm start
