--- a/.github/workflows/integrate-deploy.yml
+++ b/.github/workflows/integrate-deploy.yml
@@ -27,7 +27,8 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-
+      env:
+        CI: true
 
   # deploy:
   #   needs: [test]
