--- a/.github/workflows/integrate-deploy.yml
+++ b/.github/workflows/integrate-deploy.yml
@@ -1,11 +1,15 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# For Heroku Deployment see: https://github.com/actions/heroku
 
-name: Github CI/CD Setup
+name: Github | Heroku CI/CD Setup
 
 on:
+  push:
+    branches: 
+      - master
   pull_request:
-    branches:
+    branches: 
       - master
 
 jobs:
@@ -24,11 +28,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Installing & Testing
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
-      env:
-        CI: true
+      run: |
+        npm ci
+        npm run build --if-present
+        npm test
 
   # deploy:
   #   needs: [test]
@@ -36,9 +39,16 @@ jobs:
 
   #   steps:
   #   - name: Deploy The Sails JS App in Server via SSH
-  #   - uses: actions/checkout@master
-  #     uses: actions/setup-node@master
+  #     uses: actions/checkout@master
+  #   - name: login
+  #     uses: actions/heroku@master
+  #     env:
+  #       HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
   #     with:
-  #       node-version: 12
-  #   - run: npm ci
-  #   - run: npm start
+  #       args: container:login
+  #   - name: release
+  #     uses: actions/heroku@master
+  #     env:
+  #       HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+  #     with:
+  #       args: container:release -a calm-fortress-1234 web
