--- a/.github/workflows/integrate-deploy.yml
+++ b/.github/workflows/integrate-deploy.yml
@@ -2,12 +2,17 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 # For Heroku Deployment see: https://github.com/actions/heroku
 
-name: Github | Heroku CI/CD Setup
+name: Bookstore CI/CD
 
 on:
+  push:
+    branches: 
+      only:
+        - master
   pull_request:
     branches: 
-      - master
+      only:
+        - master
 
 jobs:
   test:
