fixing errors occurs in production mode of continuous deployment

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DB_URL=mongodb://dbRunner:4iCV727zVhra3Rri@cluster-projects-shard-00-00-dnb3s.mongodb.net:27017,cluster-projects-shard-00-01-dnb3s.mongodb.net:27017,cluster-projects-shard-00-02-dnb3s.mongodb.net:27017/Bookstore
+SESSION_SECRET=328a570c228e3fefa3b40b003121308e
 CLUSTER=Cluster-Projects-shard-0
+DB_URL=mongodb://dbRunner:4iCV727zVhra3Rri@cluster-projects-shard-00-00-dnb3s.mongodb.net:27017,cluster-projects-shard-00-01-dnb3s.mongodb.net:27017,cluster-projects-shard-00-02-dnb3s.mongodb.net:27017/Bookstore
