--- a/package.json
+++ b/package.json
@@ -33,19 +33,18 @@
   },
   "devDependencies": {
     "eslint": "5.16.0",
+    "jest": "^26.0.1",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
   },
   "scripts": {
     "start": "NODE_ENV=production node app.js",
-    "test": ""
+    "test": "jest"
   },
   "main": "app.js",
   "jest": {
-    "setupTestFrameworkScriptFile": "<rootDir>/tools/jest.js",
-    "testMatch": [
-      "<rootDir>/tests/**/*.test.js"
-    ]
+    "setupFilesAfterEnv": ["<rootDir>/tools/jest.setup.js"],
+    "testMatch": ["<rootDir>/tests/**/*.test.js"]
   },
   "repository": {
     "type": "git",
