--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
   },
   "scripts": {
     "start": "NODE_ENV=production node app.js",
-    "test": "jest"
+    "test": "jest --passWithNoTests",
+    "test:watch": "npm run test -- --watch",
+    "test:coverage": "npm run test -- --coverage"
   },
   "main": "app.js",
   "jest": {
     "setupFilesAfterEnv": ["<rootDir>/tools/jest.setup.js"],
-    "testMatch": ["<rootDir>/tests/**/*.test.js"]
+    "testMatch": ["<rootDir>/tests/**/*.(spec|test).js"]
   },
   "repository": {
     "type": "git",
